unpackaged/main/default/objects/ETVIN_Vehicle_Insurance__c/ETVIN_Vehicle_Insurance__c.object-meta.xml
<CustomObject>
    <description>Vehicle Insurance</description>
    <label>Vehicle Insurance Policy</label>
    <nameField>
        <displayFormat>VI-{0000}</displayFormat>
        <label>Insurance Ref Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicle Insurance Policies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>