unpackaged/main/default/objects/ETVIN_Vehicle_Insurance__c/fields/ETVIN_Accessories_Insurance_Value__c.field-meta.xml
<CustomField>
    <fullName>ETVIN_Accessories_Insurance_Value__c</fullName>
    <label>Accessories Insurance Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>