unpackaged/main/default/objects/ETVIN_Vehicle_Insurance__c/fields/ETVIN_Accident_Endorsement_Value__c.field-meta.xml
<CustomField>
    <fullName>ETVIN_Accident_Endorsement_Value__c</fullName>
    <label>Accident Endorsement Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>