unpackaged/main/default/objects/ETVIN_Vehicle_Insurance__c/fields/ETVIN_Chassis_Number__c.field-meta.xml
<CustomField>
    <fullName>ETVIN_Chassis_Number__c</fullName>
    <formula>Vehicle__r.Chassis_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chassis Number</label>
    <type>Text</type>
</CustomField>