unpackaged/main/default/objects/ETVIN_Vehicle_Insurance__c/fields/ETVIN_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>ETVIN_Contract_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contract Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>