unpackaged/main/default/objects/ETVIN_Vehicle_Insurance__c/fields/ETVIN_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>ETVIN_Effective_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>