unpackaged/main/default/objects/ETVIN_Vehicle_Insurance__c/fields/ETVIN_Enrollment_Date__c.field-meta.xml
<CustomField>
    <fullName>ETVIN_Enrollment_Date__c</fullName>
    <defaultValue>now()</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Enrollment Date</label>
    <type>Date</type>
</CustomField>