unpackaged/main/default/objects/ETVIN_Vehicle_Insurance__c/fields/ETVIN_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>ETVIN_Expiry_Date__c</fullName>
    <defaultValue>DATE(YEAR(TODAY()), 12, 31)</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>