unpackaged/main/default/objects/ETVIN_Vehicle_Insurance__c/fields/ETVIN_Insurance_Company__c.field-meta.xml
<CustomField>
    <fullName>ETVIN_Insurance_Company__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Insurance Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Vehicle Insurance Policies</relationshipLabel>
    <relationshipName>Vehicle_Insurances</relationshipName>
    <type>Lookup</type>
</CustomField>