unpackaged/main/default/objects/ETVIN_Vehicle_Insurance__c/fields/ETVIN_Insurance_Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>ETVIN_Insurance_Policy_Number__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Insurance Policy Number</label>
    <referenceTo>ETVIN_Insurance_Policy_Numbers__c</referenceTo>
    <relationshipLabel>Vehicle Insurance Policies</relationshipLabel>
    <relationshipName>Vehicle_Insurance_Policies</relationshipName>
    <type>Lookup</type>
</CustomField>