unpackaged/main/default/objects/ETVIN_Vehicle_Insurance__c/fields/ETVIN_Insurance_Rate_Based_on_Contract__c.field-meta.xml
<CustomField>
    <fullName>ETVIN_Insurance_Rate_Based_on_Contract__c</fullName>
    <label>Insurance Rate (Based on the Contract)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>