unpackaged/main/default/objects/ETVIN_Vehicle_Insurance__c/fields/ETVIN_Internal_Number__c.field-meta.xml
<CustomField>
    <fullName>ETVIN_Internal_Number__c</fullName>
    <formula>Vehicle__r.Internal_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Internal Number</label>
    <type>Text</type>
</CustomField>