unpackaged/main/default/objects/ETVIN_Vehicle_Insurance__c/fields/ETVIN_Is_Renewed__c.field-meta.xml
<CustomField>
    <fullName>ETVIN_Is_Renewed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Renewed</label>
    <type>Checkbox</type>
</CustomField>