unpackaged/main/default/objects/ETVIN_Vehicle_Insurance__c/fields/ETVIN_Parent_Vehicle_Insurance__c.field-meta.xml
<CustomField>
    <fullName>ETVIN_Parent_Vehicle_Insurance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Self lookup</description>
    <label>Previous Vehicle Insurance</label>
    <referenceTo>ETVIN_Vehicle_Insurance__c</referenceTo>
    <relationshipName>Vehicle_Insurances</relationshipName>
    <type>Lookup</type>
</CustomField>