unpackaged/main/default/objects/ETVIN_Vehicle_Insurance__c/fields/ETVIN_Renew_Request__c.field-meta.xml
<CustomField>
    <fullName>ETVIN_Renew_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Renew Request</label>
    <type>Checkbox</type>
</CustomField>