unpackaged/main/default/objects/ETVIN_Vehicle_Insurance__c/fields/ETVIN_Request_Status__c.field-meta.xml
<CustomField>
    <fullName>ETVIN_Request_Status__c</fullName>
    <label>Request Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Insurance Approved</fullName>
            </value>
            <value>
                <fullName>Insurance Rejected</fullName>
            </value>
            <value>
                <fullName>Insurance Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>