unpackaged/main/default/objects/ETVIN_Vehicle_Insurance__c/fields/ETVIN_TCF_No__c.field-meta.xml
<CustomField>
    <fullName>ETVIN_TCF_No__c</fullName>
    <label>TCF No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>