unpackaged/main/default/objects/ETVIN_Vehicle_Insurance__c/fields/ETVIN_Vehicle_Insurance_Value__c.field-meta.xml
<CustomField>
    <fullName>ETVIN_Vehicle_Insurance_Value__c</fullName>
    <label>Insurable Value</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>