unpackaged/main/default/objects/ETVIN_Vehicle_Insurance__c/fields/Insurance_Premium_With_Vat__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Premium_With_Vat__c</fullName>
    <label>Insurance Premium With Vat</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>