unpackaged/main/default/objects/ETVIN_Vehicle_Insurance__c/fields/Premium_Expense__c.field-meta.xml
<CustomField>
    <fullName>Premium_Expense__c</fullName>
    <label>Premium Expense</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>