unpackaged/main/default/objects/ETVIN_Vehicle_Insurance__c/fields/Reg_No__c.field-meta.xml
<CustomField>
    <fullName>Reg_No__c</fullName>
    <formula>Vehicle__r.Plate_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reg No.</label>
    <type>Text</type>
</CustomField>