unpackaged/main/default/objects/ETVIN_Vehicle_Insurance__c/fields/Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Vehicle__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Vehicle</label>
    <referenceTo>Vehicle_Master__c</referenceTo>
    <relationshipLabel>Vehicle Insurance Policies</relationshipLabel>
    <relationshipName>Vehicle_Insurance_Policies</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>