unpackaged/main/default/objects/ETVIN_Vehicle_Insurance__c/recordTypes/New_Insurance.recordType-meta.xml
<RecordType>
    <fullName>New_Insurance</fullName>
    <active>true</active>
    <label>New Insurance</label>
</RecordType>