unpackaged/main/default/objects/ETVIN_Vehicle_Insurance__c/validationRules/Amount_validation_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_validation_rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(ISBLANK(Amount__c )),
NOT(REGEX( TEXT(Amount__c ) , &quot;^[0-9.]+$&quot;))
)</errorConditionFormula>
    <errorDisplayField>Amount__c</errorDisplayField>
    <errorMessage>Enter a valid value.</errorMessage>
</ValidationRule>