unpackaged/main/default/objects/ETVIN_Vehicle_Insurance__c/validationRules/Effective_date_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Effective_date_validation</fullName>
    <active>false</active>
    <errorConditionFormula>ETVIN_Effective_Date__c &lt;  ETVIN_Enrollment_Date__c</errorConditionFormula>
    <errorDisplayField>ETVIN_Effective_Date__c</errorDisplayField>
    <errorMessage>Please enter valid Effective Date</errorMessage>
</ValidationRule>