unpackaged/main/default/objects/ETVIN_Vehicle_Insurance__c/validationRules/Enrollment_date_cant_be_past_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Enrollment_date_cant_be_past_date</fullName>
    <active>true</active>
    <errorConditionFormula>ISNEW() &amp;&amp; ETVIN_Enrollment_Date__c &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>ETVIN_Enrollment_Date__c</errorDisplayField>
    <errorMessage>Please enter valid Enrollment Date</errorMessage>
</ValidationRule>