unpackaged/main/default/objects/ETVIN_Vehicle_Insurance__c/validationRules/Expiry_date_shd_not_lessthan_enrol_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Expiry_date_shd_not_lessthan_enrol_date</fullName>
    <active>true</active>
    <errorConditionFormula>ETVIN_Enrollment_Date__c  &gt;= ETVIN_Expiry_Date__c</errorConditionFormula>
    <errorDisplayField>ETVIN_Expiry_Date__c</errorDisplayField>
    <errorMessage>Please enter valid expiry date</errorMessage>
</ValidationRule>