unpackaged/main/default/objects/ETVIN_Vehicle_Insurance__c/validationRules/Insurance_status_validation_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Insurance_status_validation_rule</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( TEXT( ETVIN_Insurance_Status__c ) )</errorConditionFormula>
    <errorDisplayField>ETVIN_Insurance_Status__c</errorDisplayField>
    <errorMessage>Insurance status should not be blank</errorMessage>
</ValidationRule>