unpackaged/main/default/objects/ETVIN_Vehicle_Insurance__c/validationRules/Status_Active_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_Active_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>IF(TEXT( ETVIN_Insurance_Status__c) ==&#39;Active&#39; &amp;&amp;  (ISBLANK( ETVIN_Effective_Date__c) || ISBLANK(  ETVIN_Expiry_Date__c )),true,false )</errorConditionFormula>
    <errorMessage>Effective date and Expiry date should not be blank</errorMessage>
</ValidationRule>