unpackaged/main/default/objects/ETVIN_Vehicle_Insurance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ETVIN_Insurance_Policy_Number__c</columns>
    <columns>ETVIN_Insurance_Company__c</columns>
    <columns>ETVIN_Insurance_Status__c</columns>
    <columns>Vehicle__c</columns>
    <columns>Zone__c</columns>
    <columns>ETVIN_Request_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>