unpackaged/main/default/objects/ETVIN_Vehicle_Insurance__c/listViews/New_Policies.listView-meta.xml
<ListView>
    <fullName>New_Policies</fullName>
    <columns>NAME</columns>
    <columns>ETVIN_Insurance_Policy_Number__c</columns>
    <columns>ETVIN_Insurance_Company__c</columns>
    <columns>ETVIN_Insurance_Status__c</columns>
    <columns>Vehicle__c</columns>
    <columns>Zone__c</columns>
    <columns>ETVIN_Request_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ETVIN_Request_Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>New Policies</label>
</ListView>