unpackaged/main/default/objects/ETVIN_Vehicle_Insurance__c/listViews/X2021_Active_Policies.listView-meta.xml
<ListView>
    <fullName>X2021_Active_Policies</fullName>
    <columns>NAME</columns>
    <columns>ETVIN_Insurance_Policy_Number__c</columns>
    <columns>ETVIN_Insurance_Company__c</columns>
    <columns>ETVIN_Insurance_Status__c</columns>
    <columns>Vehicle__c</columns>
    <columns>Zone__c</columns>
    <columns>ETVIN_Expiry_Date__c</columns>
    <columns>ETVIN_Request_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ETVIN_Expiry_Date__c</field>
        <operation>equals</operation>
        <value>12/31/2021</value>
    </filters>
    <label>2021 Active Policies</label>
</ListView>